--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weddings</title>
     <link rel="stylesheet" href="style.css">
   </head>
@@ -25,14 +26,23 @@
     <div id="titleImages">
         <ul>
             <li>
-                <img src="wedding_images/img1.png">
+                <div class="titleImageWrapper">
+                    <img src="wedding_images/img1.png">
+                    <p>Example Venue | £199.00</p>
+                </div>
             </li>
             <li>
-                <img src="wedding_images/img2.png">
-                <p>Discover the enchanting allure of our exquisite wedding venue, where dreams come alive against a backdrop of timeless elegance and natural beauty.</p>
+                <div class="titleImageWrapper">
+                    <img src="wedding_images/img2.png">
+                    <p>Example Venue | £199.00</p>
+                </div>
+                <p id="introText">Discover the enchanting allure of our exquisite wedding venue, where dreams come alive against a backdrop of timeless elegance and natural beauty.</p>
             </li>
             <li>
-                <img src="wedding_images/img3.png">
+                <div class="titleImageWrapper">
+                    <img src="wedding_images/img3.png">
+                    <p>Example Venue | £199.00</p>
+                </div>
             </li>
         </ul>
     </div>
@@ -44,7 +54,7 @@
     </div>
 
     <div id="footer">
-        <p>Edgar Fleming | UoL 2024</p>
+        <p>Christopher Morley | UoL 2024</p>
     </div>
 
   </body>
